--- a/tests/files/3-first-device-but-removing-motherboard-and-adding-processor-from-2.snapshot.yaml
+++ b/tests/files/3-first-device-but-removing-motherboard-and-adding-processor-from-2.snapshot.yaml
@@ -1,5 +1,5 @@
 device:
-  manufactuer: 'p1'
+  manufacturer: 'p1'
   serialNumber: 'p1'
   model: 'p1'
   type: 'Desktop'
@@ -7,7 +7,7 @@ secured: False
 components:
   - manufacturer: 'p1c2m'
     serialNumber: 'p1c2s'
-    model: 'p1'
+    model: 'p1c2'
     type: 'Processor'
     cores: 2
     speed: 1.23
@@ -15,3 +15,10 @@ components:
     serialNumber: 'p1c3s'
     type: 'GraphicCard'
     memory: 1.5
+condition:
+  appearance: 'C'
+  functionality: 'C'
+elapsed: 30
+software: 'Workbench'
+uuid: '3be271b6-5ef4-47d8-8237-5e1133eebfc6'
+version: '11.0'
