--- a/tests/files/workbench-server-3.erase.yaml
+++ b/tests/files/workbench-server-3.erase.yaml
@@ -8,8 +8,8 @@
 
 type: 'EraseSectors'
 error: False
-snapshot: None # fulfill!
-device: None # fulfill!
+# snapshot: None fulfill!
+# device: None fulfill!
 cleanWithZeros: False
 startTime: 2018-01-01T10:10:10
 endTime: 2018-01-01T12:10:10
@@ -19,3 +19,5 @@ steps:
     startTime: '2018-01-01T10:10:10'
     endTime: '2018-01-01T12:10:10'
     error: False
+    cleanWithZeros: False
+    secureRandomSteps: 0
