--- a/tests/files/workbench-server-4.install.yaml
+++ b/tests/files/workbench-server-4.install.yaml
@@ -9,6 +9,6 @@
 type: 'Install'
 elapsed: 420
 error: False
-snapshot: None # fulfill!
-device: None # fulfill!
+# snapshot: None fulfill!
+# device: None fulfill!
 name: 'LinuxMint 18.01 32b'
