--- a/tests/files/1-device-with-components.snapshot.yaml
+++ b/tests/files/1-device-with-components.snapshot.yaml
@@ -1,23 +1,24 @@
 device:
-  manufacturer: 'p1'
-  serialNumber: 'p1'
-  model: 'p1'
-  type: 'Desktop'
+  manufacturer: p1
+  serialNumber: p1
+  model: p1
+  type: Desktop
+  chassis: Tower
 components:
-  - manufacturer: 'p1c1m'
-    serialNumber: 'p1c1s'
-    type: 'Motherboard'
-  - manufacturer: 'p1c2m'
-    serialNumber: 'p1c2s'
-    model: 'p1c2'
+  - manufacturer: p1c1m
+    serialNumber: p1c1s
+    type: Motherboard
+  - manufacturer: p1c2m
+    serialNumber: p1c2s
+    model: p1c2
     speed: 1.23
     cores: 2
-    type: 'Processor'
-  - manufacturer: 'p1c3m'
-    serialNumber: 'p1c3s'
-    type: 'GraphicCard'
+    type: Processor
+  - manufacturer: p1c3m
+    serialNumber: p1c3s
+    type: GraphicCard
     memory: 1.5
 elapsed: 25
-software: 'Workbench'
-uuid: '76860eca-c3fd-41f6-a801-6af7bd8cf832'
+software: Workbench
+uuid: 76860eca-c3fd-41f6-a801-6af7bd8cf832
 version: '11.0'
