--- a/tests/files/4-first-device-but-removing-processor.snapshot-and-adding-graphic-card.yaml
+++ b/tests/files/4-first-device-but-removing-processor.snapshot-and-adding-graphic-card.yaml
@@ -1,18 +1,19 @@
 device:
-  manufacturer: 'p1'
-  serialNumber: 'p1'
-  model: 'p1'
-  type: 'Desktop'
+  manufacturer: p1
+  serialNumber: p1
+  model: p1
+  type: Desktop
+  chassis: Tower
 components:
-  - manufacturer: 'p1c4m'
-    serialNumber: 'p1c4s'
-    type: 'NetworkAdapter'
+  - manufacturer: p1c4m
+    serialNumber: p1c4s
+    type: NetworkAdapter
     speed: 1000
-  - manufacturer: 'p1c3m'
-    serialNumber: 'p1c3s'
-    type: 'GraphicCard'
+  - manufacturer: p1c3m
+    serialNumber: p1c3s
+    type: GraphicCard
     memory: 1.5
 elapsed: 25
-software: 'Workbench'
-uuid: 'fd007eb4-48e3-454a-8763-169491904c6e'
+software: Workbench
+uuid: fd007eb4-48e3-454a-8763-169491904c6e
 version: '11.0'
