--- a/tests/files/workbench-server-1.snapshot.yaml
+++ b/tests/files/workbench-server-1.snapshot.yaml
@@ -1,66 +1,67 @@
 # A Snapshot Phase 1 with a device
 # and 1 GraphicCard, 2 RamModule, 1 Processor, 1 SSD, 1 HDD, 1 Motherboard
 # Prerequisites:
-#  - 2 tags: 'tag1' and 'tag2' from the default org
+#  - 2 tags: tag1 and tag2 from the default org
 # All numbers are invented
 
 
-type: 'Snapshot'
-uuid: 'cb8ce6b5-6a1b-4084-b5b9-d8fadad2a015'
+type: Snapshot
+uuid: cb8ce6b5-6a1b-4084-b5b9-d8fadad2a015
 version: '11.0'
-software: 'Workbench'
-expectedEvents: ['TestDataStorage', 'StressTest', 'EraseSectors', 'Install']
+software: Workbench
+expectedEvents: [TestDataStorage, StressTest, EraseSectors, Install]
 elapsed: 500
 device:
-  type: 'Microtower'
-  serialNumber: 'd1s'
-  model: 'd1ml'
-  manufacturer: 'd1mr'
+  type: Desktop
+  chassis: Tower
+  serialNumber: d1s
+  model: d1ml
+  manufacturer: d1mr
   tags:
-    - type: 'Tag'
-      id: 'tag1'
+    - type: Tag
+      id: tag1
   events:
-    - type: 'WorkbenchRate'
-      appearanceRange: 'A'
-      functionalityRange: 'B'
-    - type: 'BenchmarkRamSysbench'
+    - type: WorkbenchRate
+      appearanceRange: A
+      functionalityRange: B
+    - type: BenchmarkRamSysbench
       rate: 2444
 components:
-  - type: 'GraphicCard'
-    serialNumber: 'gc1-1s'
-    model: 'gc1-1ml'
-    manufacturer: 'gc1-1mr'
-  - type: 'RamModule'
-    serialNumber: 'rm1-1s'
-    model: 'rm1-1ml'
-    manufacturer: 'rm1-1mr'
-  - type: 'RamModule'
-    serialNumber: 'rm2-1s'
-    model: 'rm2-1ml'
-    manufacturer: 'rm2-1mr'
-  - type: 'Processor'
-    model: 'p1-1s'
-    manufacturer: 'p1-1mr'
+  - type: GraphicCard
+    serialNumber: gc1-1s
+    model: gc1-1ml
+    manufacturer: gc1-1mr
+  - type: RamModule
+    serialNumber: rm1-1s
+    model: rm1-1ml
+    manufacturer: rm1-1mr
+  - type: RamModule
+    serialNumber: rm2-1s
+    model: rm2-1ml
+    manufacturer: rm2-1mr
+  - type: Processor
+    model: p1-1s
+    manufacturer: p1-1mr
     events:
-      - type: 'BenchmarkProcessor'
+      - type: BenchmarkProcessor
         rate: 2410
-      - type: 'BenchmarkProcessorSysbench'
+      - type: BenchmarkProcessorSysbench
         rate: 4400
-  - type: 'SolidStateDrive'
-    serialNumber: 'ssd1-1s'
-    model: 'ssd1-1ml'
-    manufacturer: 'ssd1-1mr'
+  - type: SolidStateDrive
+    serialNumber: ssd1-1s
+    model: ssd1-1ml
+    manufacturer: ssd1-1mr
     events:
-      - type: 'BenchmarkDataStorage'
+      - type: BenchmarkDataStorage
         readSpeed: 20
         writeSpeed: 15
         elapsed: 21
-      - type: 'TestDataStorage'
+      - type: TestDataStorage
         elapsed: 233
         firstError: 0
         error: False
-        status: 'Completed without error'
-        length: 'Short'
+        status: Completed without error
+        length: Short
         lifetime: 99
         passedLifetime: 99
         assessment: True
@@ -72,15 +73,15 @@ components:
         currentPendingSectorCount: 1
         offlineUncorrectable: 33
         remainingLifetimePercentage: 1
-  - type: 'HardDrive'
-    serialNumber: 'hdd1-1s'
-    model: 'hdd1-1ml'
-    manufacturer: 'hdd1-1mr'
+  - type: HardDrive
+    serialNumber: hdd1-1s
+    model: hdd1-1ml
+    manufacturer: hdd1-1mr
     events:
-      - type: 'BenchmarkDataStorage'
+      - type: BenchmarkDataStorage
         readSpeed: 10
         writeSpeed: 5
-  - type: 'Motherboard'
-    serialNumber: 'mb1-1s'
-    model: 'mb1-1ml'
-    manufacturer: 'mb1-1mr'
+  - type: Motherboard
+    serialNumber: mb1-1s
+    model: mb1-1ml
+    manufacturer: mb1-1mr
