Add cpu.threads and network.wireless; add snapshots to testing / dummy

--- a/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-hp.snapshot.11.yaml
@@ -8,7 +8,8 @@
       "type": "NetworkAdapter",
       "manufacturer": "Intel Corporation",
       "speed": 1000,
-      "model": "82578DM Gigabit Network Connection"
+      "model": "82578DM Gigabit Network Connection",
+      "wireless": false
     },
     {
       "format": "DIMM",
