--- a/tests/files/4-first-device-but-removing-processor.snapshot-and-adding-graphic-card.yaml
+++ b/tests/files/4-first-device-but-removing-processor.snapshot-and-adding-graphic-card.yaml
@@ -9,6 +9,7 @@ components:
     serialNumber: p1c4s
     type: NetworkAdapter
     speed: 1000
+    wireless: False
   - manufacturer: p1c3m
     serialNumber: p1c3s
     type: GraphicCard
