--- a/tests/files/real-eee-1001pxd.snapshot.11.yaml
+++ b/tests/files/real-eee-1001pxd.snapshot.11.yaml
@@ -1,158 +1,1 @@
-{
-  "components": [
-  {
-    "type": "NetworkAdapter",
-    "model": "AR9285 Wireless Network Adapter",
-    "serialNumber": "74:2f:68:8b:fd:c8",
-    "manufacturer": "Qualcomm Atheros",
-    "wireless": true,
-    "events": []
-  },
-  {
-    "type": "NetworkAdapter",
-    "model": "AR8152 v2.0 Fast Ethernet",
-    "serialNumber": "14:da:e9:42:f6:7c",
-    "manufacturer": "Qualcomm Atheros",
-    "speed": 100,
-    "wireless": false,
-    "events": []
-  },
-  {
-    "type": "Processor",
-    "cores": 1,
-    "threads": 1,
-    "address": 64,
-    "model": "Intel Atom CPU N455 @ 1.66GHz",
-    "serialNumber": null,
-    "manufacturer": "Intel Corp.",
-    "speed": 1.667,
-    "events": [
-    {
-      "type": "BenchmarkProcessorSysbench",
-      "rate": 164.0803,
-      "elapsed": 164
-    },
-    {
-      "type": "BenchmarkProcessor",
-      "rate": 6666.24,
-      "elapsed": 0
-    }
-    ]
-  },
-  {
-    "type": "GraphicCard",
-    "model": "Atom Processor D4xx/D5xx/N4xx/N5xx Integrated Graphics Controller",
-    "serialNumber": null,
-    "memory": 256.0,
-    "manufacturer": "Intel Corporation",
-    "events": []
-  },
-  {
-    "type": "SoundCard",
-    "model": "NM10/ICH7 Family High Definition Audio Controller",
-    "serialNumber": null,
-    "manufacturer": "Intel Corporation",
-    "events": []
-  },
-  {
-    "type": "SoundCard",
-    "model": "USB 2.0 UVC VGA WebCam",
-    "serialNumber": "0x0001",
-    "manufacturer": "Azurewave",
-    "events": []
-  },
-  {
-    "type": "RamModule",
-    "format": "DIMM",
-    "model": null,
-    "size": 1024,
-    "interface": "DDR2",
-    "serialNumber": null,
-    "manufacturer": null,
-    "speed": 667.0,
-    "events": []
-  },
-  {
-    "type": "HardDrive",
-    "model": "HTS54322",
-    "size": 238475,
-    "interface": "ATA",
-    "serialNumber": "E2024242CV86HJ",
-    "manufacturer": "Hitachi",
-    "events": [
-    {
-      "type": "BenchmarkDataStorage",
-      "elapsed": 16,
-      "writeSpeed": 21.8,
-      "readSpeed": 66.2
-    },
-    {
-      "type": "TestDataStorage",
-      "length": "Short",
-      "elapsed": 2,
-      "error": true,
-      "status": "Unspecified Error. Self-test not started."
-    },
-    {
-      "type": "EraseBasic",
-      "steps": [
-      {
-        "type": "StepRandom",
-        "startTime": "2018-07-03T09:15:22.257059",
-        "error": false,
-        "endTime": "2018-07-03T10:32:11.843190"
-      }
-      ],
-      "startTime": "2018-07-03T09:15:22.256074",
-      "error": false,
-      "zeros": false,
-      "endTime": "2018-07-03T10:32:11.848455"
-    }
-    ]
-  },
-  {
-    "type": "Motherboard",
-    "serial": 1,
-    "firewire": 0,
-    "model": "1001PXD",
-    "slots": 2,
-    "pcmcia": 0,
-    "serialNumber": "Eee0123456789",
-    "usb": 5,
-    "manufacturer": "ASUSTeK Computer INC.",
-    "events": []
-  }
-  ],
-  "elapsed": 4875,
-  "uuid": "c058e8d2-fb92-47cb-a4b7-522b75561135",
-  "version": "11.0a2",
-  "type": "Snapshot",
-  "software": "Workbench",
-  "endTime": "2018-07-03T09:10:57.034598",
-  "device": {
-    "type": "Laptop",
-    "model": "1001PXD",
-    "serialNumber": "B8OAAS048286",
-    "manufacturer": "ASUSTeK Computer INC.",
-    "chassis": "Netbook",
-    "events": [
-    {
-      "type": "BenchmarkRamSysbench",
-      "rate": 15.7188,
-      "elapsed": 16
-    },
-    {
-      "type": "StressTest",
-      "error": false,
-      "elapsed": 60
-    }
-    ]
-  },
-  "expectedEvents": [
-    "Benchmark",
-    "SmartTest",
-    "StressTest",
-    "EraseBasic"
-  ],
-  "closed": false
-}
+../../ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
