Use venv from mod-apache

--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -8,11 +8,13 @@ Define appdir /path/to/app/dir
 # The path where the app directory is. Apache must have access to this folder.
 Define wsgipath ${appdir}/wsgi.wsgi
 # The location of the .wsgi file
+Define pyvenv /path/to/venv
+# The path where the virtual environment is (the folder containing bin/activate)
 
 <VirtualHost *:80>
     ServerName ${servername}
 
-    WSGIDaemonProcess "${servername}" threads=5 lang='en_US.UTF-8' locale='en_US.UTF-8'
+    WSGIDaemonProcess "${servername}" threads=5 lang='en_US.UTF-8' locale='en_US.UTF-8' python-home="${pyvenv}"
     WSGIScriptAlias / ${wsgipath}
 
     #  pass the required headers through to the application
