--- a/ereuse_devicehub/dummy/files/computer-monitor.snapshot.yaml
+++ b/ereuse_devicehub/dummy/files/computer-monitor.snapshot.yaml
@@ -11,7 +11,7 @@ device:
   resolutionHeight: 1080
   size: 21.5
   events:
-  - type: AppRate
+  - type: ManualRate
     appearanceRange: A
     functionalityRange: C
     labelling: False
