--- a/tests/files/basic.snapshot.yaml
+++ b/tests/files/basic.snapshot.yaml
@@ -14,7 +14,7 @@ device:
     appearanceRange: A
     functionalityRange: B
     labelling: True
-    bios: B
+    biosRange: B
 components:
 - type: GraphicCard
   serialNumber: gc1s
