--- a/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
+++ b/ereuse_devicehub/dummy/files/real-eee-1001pxd.snapshot.11.yaml
@@ -145,6 +145,12 @@
       "type": "StressTest",
       "error": false,
       "elapsed": 60
+    },
+    {
+      "appearanceRange": "B",
+      "biosRange": "C",
+      "functionalityRange": "A",
+      "type": "WorkbenchRate"
     }
     ]
   },
