--- a/tests/files/david.lshw.snapshot.yaml
+++ b/tests/files/david.lshw.snapshot.yaml
@@ -5,7 +5,7 @@
   "version": "11.0a1",
   "expectedEvents": [],
   "closed": true,
-  "endTime": "0001-01-01 00:00:00",
+  "endTime": "2018-07-19T15:48:40.635776",
   "device": {
     "manufacturer": "Dell Inc.",
     "model": "Latitude E6440",
