--- a/examples/apache.conf
+++ b/examples/apache.conf
@@ -4,11 +4,11 @@
 
 Define servername api.devicetag.io
 # The domain used to access the server
-Define appdir /path/to/app/dir
+Define appdir /home/devicetag/sites/${servername}/source/
 # The path where the app directory is. Apache must have access to this folder.
 Define wsgipath ${appdir}/wsgi.wsgi
 # The location of the .wsgi file
-Define pyvenv /path/to/venv
+Define pyvenv ${appdir}/venv/
 # The path where the virtual environment is (the folder containing bin/activate)
 
 <VirtualHost *:80>
